--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 asgiref==3.8.1
+Brotli==1.1.0
+click==8.1.7
+colorama==0.4.6
+dj-database-url==2.2.0
 Django==5.0.4
+gunicorn==22.0.0
+h11==0.14.0
 joblib==1.4.2
 numpy==1.26.4
+packaging==24.0
+psycopg2-binary==2.9.9
 scikit-learn==1.2.2
 scipy==1.13.1
 sqlparse==0.5.0
 threadpoolctl==3.5.0
 typing_extensions==4.11.0
 tzdata==2024.1
+uvicorn==0.30.0
+whitenoise==6.6.0
