--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,34 @@ asgiref==3.8.1
 Brotli==1.1.0
 click==8.1.7
 colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
 dj-database-url==2.2.0
 Django==5.0.4
+fonttools==4.53.0
 gunicorn==22.0.0
 h11==0.14.0
+imageio==2.34.1
 joblib==1.4.2
+kiwisolver==1.4.5
+lazy_loader==0.4
+lime==0.2.0.1
+matplotlib==3.9.0
+networkx==3.3
 numpy==1.26.4
 packaging==24.0
+pillow==10.3.0
 psycopg2-binary==2.9.9
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+scikit-image==0.23.2
 scikit-learn==1.2.2
 scipy==1.13.1
+six==1.16.0
 sqlparse==0.5.0
 threadpoolctl==3.5.0
+tifffile==2024.5.22
+tqdm==4.66.4
 typing_extensions==4.11.0
 tzdata==2024.1
 uvicorn==0.30.0
